tests/toy/neg/001067_mutation.toylang
program a = { if a then sleep int; } .
